--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,69 +1,71 @@
 
-<img id="precarga" src="../../assets/logocarga2.gif" alt="">
-
-<div class="container">  
-  
-  <div class="row justify-content-center" >
-    <div class="col-sm-4">
-      <a href="animacion">
-        <img id="logo2d" 
-        [src]="imgsrc2d" 
-        (mouseover)="imgsrc2d ='../../assets/2d.gif'" 
-        (mouseout)="imgsrc2d = '../../assets/2D.png'"  alt="Paris"   class="mx-auto d-block">
-      </a>  
-    </div>
-    <div class="col-sm-4 "> 
-      <img id="lampara" src="../../assets/lampara.png"  class="mx-auto d-block">
-    </div>
-    <div class="col-sm-4">
-      <a href="animacion">
-        <img id="logo3d" 
-        [src]="imgsrc3d" 
-        (mouseover)="imgsrc3d = '../../assets/3D.gif'" 
-        (mouseout)="imgsrc3d = '../../assets/3D.png'" alt="Paris"  class="mx-auto d-block">
-      </a>  
+  <div class="row">
+    <div class="col-12">
+      <img id="precarga" src="../../../assets/logocarga2.gif" alt="">
     </div>
   </div>
-</div>
-<div class="container">
-  <div class="sec">
+  <div class="container">  
     <div class="row justify-content-center" >
-      <div class="col-sm-3">
-        <a href="guiones">
-          <img id="logoguiones" 
-          [src]="imgsrcguiones" 
-          (mouseover)="imgsrcguiones = '../../assets/guiones2.gif'" 
-          (mouseout)="imgsrcguiones = '../../assets/guiones2.png'" alt="Paris"   class="mx-auto d-block"> 
-        </a> 
-      </div>
-      <div class="col-sm-3 ">
-        <a href="audiovideo">
-          <img id="logoaudio" 
-          [src]="imgsrcaudio" 
-          (mouseover)="imgsrcaudio = '../../assets/audio.gif'" 
-          (mouseout)="imgsrcaudio = '../../assets/audio.png'" alt="Paris"   class="mx-auto d-block">
-        </a> 
-      </div>
-      <div class="col-sm-3">
-        <a href="programacion">
-          <img id="logoprogramacion" 
-          [src]="imgsrcprogramacion" 
-          (mouseover)="imgsrcprogramacion = '../../assets/promagramacion.gif'" 
-          (mouseout)="imgsrcprogramacion = '../../assets/promagramacion.png'"
-          alt="Paris"  class="mx-auto d-block">
+      <div class="col-sm-4">
+        <a href="animacion">
+          <img id="logo2d" 
+          [src]="imgsrc2d" 
+          (mouseover)="imgsrc2d ='../../assets/2d.gif'" 
+          (mouseout)="imgsrc2d = '../../assets/2D.png'"  alt="Paris"   class="mx-auto d-block">
         </a>  
       </div>
-      <div class="col-sm-3">
-        <a href="aplicacion">
-          <img id="logorealidad" 
-          [src]="imgsrcrealidad" 
-          (mouseover)="imgsrcrealidad = '../../assets/realidad.gif'" 
-          (mouseout)="imgsrcrealidad = '../../assets/realidad.png'" alt="Paris"  class="mx-auto d-block">
-        </a> 
+      <div class="col-sm-4 "> 
+        <img id="lampara" src="../../assets/lampara.png"  class="mx-auto d-block">
+      </div>
+      <div class="col-sm-4">
+        <a href="animacion">
+          <img id="logo3d" 
+          [src]="imgsrc3d" 
+          (mouseover)="imgsrc3d = '../../assets/3D.gif'" 
+          (mouseout)="imgsrc3d = '../../assets/3D.png'" alt="Paris"  class="mx-auto d-block">
+        </a>  
       </div>
     </div>
   </div>
-</div>
+  <div class="container">
+    <div class="sec">
+      <div class="row justify-content-center" >
+        <div class="col-sm-3">
+          <a href="guiones">
+            <img id="logoguiones" 
+            [src]="imgsrcguiones" 
+            (mouseover)="imgsrcguiones = '../../assets/guiones2.gif'" 
+            (mouseout)="imgsrcguiones = '../../assets/guiones2.png'" alt="Paris"   class="mx-auto d-block"> 
+          </a> 
+        </div>
+        <div class="col-sm-3 ">
+          <a href="audiovideo">
+            <img id="logoaudio" 
+            [src]="imgsrcaudio" 
+            (mouseover)="imgsrcaudio = '../../assets/audio.gif'" 
+            (mouseout)="imgsrcaudio = '../../assets/audio.png'" alt="Paris"   class="mx-auto d-block">
+          </a> 
+        </div>
+        <div class="col-sm-3">
+          <a href="programacion">
+            <img id="logoprogramacion" 
+            [src]="imgsrcprogramacion" 
+            (mouseover)="imgsrcprogramacion = '../../assets/promagramacion.gif'" 
+            (mouseout)="imgsrcprogramacion = '../../assets/promagramacion.png'"
+            alt="Paris"  class="mx-auto d-block">
+          </a>  
+        </div>
+        <div class="col-sm-3">
+          <a href="aplicacion">
+            <img id="logorealidad" 
+            [src]="imgsrcrealidad" 
+            (mouseover)="imgsrcrealidad = '../../assets/realidad.gif'" 
+            (mouseout)="imgsrcrealidad = '../../assets/realidad.png'" alt="Paris"  class="mx-auto d-block">
+          </a> 
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
